Feature: nuevo endpoint de cambio de display name
